[package]
name = "lurcar-tools"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lurcar = {path = "../lurcar"}
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.116"
colorize = "0.1.0"
serde = { version = "1.0.200", features = ["derive"] }
base64 = "0.22.1"
serde_yaml = "0.9.34"
bitcode = "0.6"
walkdir = "2.5.0"
indicatif = "0.17.8"
threadpool = "1.8.1"
flume = "0.11.0"
