[package]
name = "lurcar"
edition = "2021"

version.workspace = true

[dependencies]
anyhow = "1"
bitcode = "0.6"
byteorder = "1.5"
serde = { version = "1.0.200", features = ["derive"] }
fuser = { version = "*", optional = true}
libc = {version = "*", optional = true}
[features]
fuse = ["dep:fuser", "dep:libc"]